--- a/app/src/main/res/layout/activity_orientation_test.xml
+++ b/app/src/main/res/layout/activity_orientation_test.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.hmr.devtest.OrientationTest">
+    tools:context="com.example.hmr.devtest.sensor.OrientationTest"
+    android:background="@android:color/darker_gray">
 
     <ImageView
         android:layout_width="match_parent"
