--- a/app/src/main/res/values/buttons.xml
+++ b/app/src/main/res/values/buttons.xml
@@ -2,5 +2,5 @@
 <resources>
     <dimen name="button_width">100dp</dimen>
     <dimen name="button_heigh">100dp</dimen>
-    <dimen name="button_text_size">10dp</dimen>
+    <dimen name="button_text_size">10sp</dimen>
 </resources>
