fixed no receiver output, added 1khz test sound and model information

--- a/app/src/main/res/layout/activity_camera_test.xml
+++ b/app/src/main/res/layout/activity_camera_test.xml
@@ -17,5 +17,5 @@
         android:text="@string/takepicture"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
-         />
+        android:onClick="takePicture" />
 </RelativeLayout>
